# aiu-trace-analyzer

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
profiles/: everything.json
src/aiu_trace_analyzer/: README.md  constants.py  logger.py  trace_view.py  types.py
src/aiu_trace_analyzer/core/: acelyzer.py  duplicate_hold.py  engine.py  processing.py  stage_profile.py
src/aiu_trace_analyzer/export/: exporter.py
src/aiu_trace_analyzer/ingest/: ingestion.py
src/aiu_trace_analyzer/pipeline/: __init__.py  barrier.py  be_pair.py  cmpt_collection.py  coll_group.py  context.py  correctness.py  dma.py  drop_global_event.py  filter.py  flex_job_offset.py  hashqueue.py  inverse_ts.py  iteration_detect.py  make_slice.py  mappings.py  mp_calc_bw.py  mp_calc_bw_v2.py  mp_sync.py  mp_sync_tight.py  mp_sync_v2.py  normalize.py  overlap.py  power.py  rcu_utilization.py  sort.py  stats.py  stats_v2.py  tb_refinement.py  template.py  tid_mapping.py  time_align.py  timesync.py  tools.py  tripple_event.py
tests/: README.md  conftest.py
tests/acelyzer/: test_acelyzer.py
tests/aiu_trace_analyzer/core/: test_stage_profile.py
tests/aiu_trace_analyzer/inout/: test_ingestion.py
tests/aiu_trace_analyzer/pipeline/: test_barrier.py  test_flow_prep.py  test_hashqueue.py  test_mappings.py  test_mp_calc_bw.py  test_normalize.py  test_overlap.py  test_rcu_utilization.py  test_tools.py  (+2 more)
tests/test_data/: allreduce_tp4.json  basic_event_test_cases.json  meta_events_only.json  sample_comp_log_ideal.txt  sample_flex_3062_job_4.json
