[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "aiu_trace_analyzer"
description = "AIU Trace Analyzer (acelyzer) for post-processing of trace files."
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
version = "0.5"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pytest",
    "pandas"
]

[project.scripts]
acelyzer = "acelyzer.acelyzer:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
